# soroban-examples

./: Cargo.toml
test/cli-tests/: Cargo.toml
test/cli-tests/tests/it/: hello_world.rs
