[package]
name = "cli-tests"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]
doctest = false

[dev-dependencies]
soroban-test = {  git = "https://github.com/ahalabs/soroban-tools", branch = "feat/test-lib" }